<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.03" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".97" />

            <Button
                android:id="@+id/recognizeImageLink"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true"
                android:text="@string/scan_from_gallery"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/showScannerLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true"
                android:text="@string/scan_from_scanner"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/recognizeImageLink" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineDocImageTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.17"
                app:layout_constraintTop_toBottomOf="@+id/showScannerLink" />

            <TextView
                android:id="@+id/docImageLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/document_image"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/guidelineDocImageTop" />

            <ImageView
                android:id="@+id/documentImageIv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/id"
                app:layout_constraintTop_toBottomOf="@+id/docImageLabel" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineDocImageBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/picture"
                app:layout_constraintGuide_percent="0.42" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelinePortraitTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.50" />

            <TextView
                android:id="@+id/picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintBottom_toTopOf="@+id/guidelinePortraitBottom"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/guidelinePortraitTop" />

            <ImageView
                android:id="@+id/portraitIv"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:src="@drawable/portrait"
                app:layout_constraintBottom_toTopOf="@+id/guidelinePortraitBottom"
                app:layout_constraintStart_toEndOf="@+id/picture"
                app:layout_constraintTop_toBottomOf="@id/guidelinePortraitTop" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelinePortraitBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.60"
                app:layout_constraintTop_toBottomOf="@+id/showScannerLink" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineInfoTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.62"
                app:layout_constraintTop_toBottomOf="@+id/guidelinePortraitBottom" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/guidelineInfoTop" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toEndOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/guidelineInfoTop" />

            <TextView
                android:id="@+id/tv_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dob"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toEndOf="@+id/tv_dob"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/gender"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/dob" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toEndOf="@+id/tv_gender"
                app:layout_constraintTop_toBottomOf="@+id/dob" />

            <TextView
                android:id="@+id/tv_nationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nationality"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/gender" />

            <TextView
                android:id="@+id/nationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toEndOf="@+id/tv_nationality"
                app:layout_constraintTop_toBottomOf="@+id/gender" />

            <TextView
                android:id="@+id/tv_doc_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/doc_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/nationality" />

            <TextView
                android:id="@+id/doc_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toEndOf="@+id/tv_doc_number"
                app:layout_constraintTop_toBottomOf="@+id/nationality" />

            <TextView
                android:id="@+id/tv_date_of_issue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/date_of_issue"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/doc_number" />

            <TextView
                android:id="@+id/date_of_issue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toEndOf="@+id/tv_date_of_issue"
                app:layout_constraintTop_toBottomOf="@+id/doc_number" />

            <TextView
                android:id="@+id/tv_date_of_expiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/date_of_expiry"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/date_of_issue" />

            <TextView
                android:id="@+id/date_of_expiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintStart_toEndOf="@+id/tv_date_of_expiry"
                app:layout_constraintTop_toBottomOf="@+id/date_of_issue" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineInfoBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.99"
                app:layout_constraintTop_toBottomOf="@+id/showScannerLink" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>